# blob-upload-site

./: .gitignore  .release-please-manifest.json  main.py  release-please-config.json
.github/workflows/: backend.yaml  build-docker.yaml  release-please.yaml
blob/: blob.py  pyproject.toml
blob/database/: database.py
blob/database/init/: init.db.sql
blob/routers/: auth.py  jwt1.py
file-manager/src/: App.js
file-manager1/src/: App.jsx
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/backend/database/: database.py
src/backend/src/backend/routers/: auth.py  jwt1.py
src/backend/src/backend/storage/: blob.py
src/frontend/: CHANGELOG.md
src/frontend/src/frontend/file-manager1/: Dockerfile  nginx.conf  package-lock.json  package.json
src/frontend/src/frontend/file-manager1/src/: authConfig.js  main.jsx
